[project]
dynamic = ["classifiers", "version", "authors", "readme", "requires-python", "description"]
dependencies = [
    "beaupy===3.7.2",
    "rich===13.7.0",
    "termcolor===2.4.0",
    "pyautogen===0.2.14",
    "autogenstudio===0.0.44a0",
    "jinja2>=3.1.3"
]
name = "composio-autogen"

[build-system]
requires = [ "setuptools>=42", "wheel" ]
build-backend = "setuptools.build_meta"