[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Composio Documentation"
authors = ["angrybayblade <vptl185@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
composio-core = {path = "composio"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
