[project]
name = "fern"
version = "0.1.0"
description = "Documentation generators for Composio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "inflection>=0.5.1",
    "click>=8.1.7",
    "ruamel-yaml>=0.18.10",
    "typing-extensions>=4.13.0",
    "composio-client==0.1.0a11",
    "openai>=1.79.0",
    "composio==1.0.0rc3",
    # Dependencies for SDK doc generation
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "GitPython>=3.1.0",
    "packaging>=20.0",
    "nbformat>=5.0.0",
    "composio-langchain==1.0.0rc2",
    "composio-core>=0.7.18",
    "composio-openai>=0.7.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]


[tool.uv.workspace]
members = ["snippets/migration"]

[tool.setuptools.packages.find]
include = ["generators*"]

[dependency-groups]
dev = ["composio", "composio-langchain", "langchain>=0.3.25"]
