[project]
name = "fern"
version = "0.1.0"
description = "Documentation generators for Composio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "inflection>=0.5.1",
    "click>=8.1.7",
    "ruamel-yaml>=0.18.10",
    "typing-extensions>=4.13.0",
    "composio-client==1.22.0",
    "openai>=1.79.0",
    "composio==1.0.0rc5",
    # Dependencies for SDK doc generation
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "GitPython>=3.1.0",
    "packaging>=20.0",
    "nbformat>=5.0.0",
    "composio-langchain",
    "composio-openai",
    "composio-gemini",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generators"]

[tool.uv.sources]
composio-openai-agents = { workspace = true }
composio-gemini = { workspace = true }
composio = { workspace = true }

[dependency-groups]
dev = [
    "composio==1.0.0rc6",
    "composio-gemini",
    "composio-langchain",
    "composio-openai-agents",
    "google-genai>=1.20.0",
    "langchain>=0.3.25",
    "openai-agents>=0.0.19",
]
