[project]
dynamic = ["classifiers", "version", "readme", "authors", "requires-python", "description"]
dependencies = [
    "requests",
    "jsonschema",
    "argparse",
    "nest_asyncio",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2.post1",
    "langchainhub>=0.1.15",
    "pydantic>=2.6.4",
    "composio_core===0.1.75"
]
name = "composio_langchain"

[build-system]
requires = [ "setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"