[project]
dynamic = ["classifiers", "version", "readme", "authors", "requires-python", "description"]
dependencies = [
    "lyzr-automata>=0.1.3",
    "pydantic>=2.6.4",
    "composio_core===0.2.1",
    "langchain>=0.1.0"
]
name = "composio_lyzr"

[build-system]
requires = [ "setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"