[project]
name = "composio"
version = "0.7.4"  # Match current version
description = "Composio SDK for LLM tool management"
authors = [
    {name = "Composio", email = "tech@composio.dev"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# Core dependencies from requirements.txt
dependencies = [
    "requests>=2.31.0,<3",
    "jsonschema>=4.21.1,<5",
    "beaupy>=3.7.2,<4",
    "termcolor>=2.4.0,<3",
    "pydantic>=2.6.4,<3",
    "openai>=1.3.0",
    "rich>=13.7.1,<14",
    "importlib-metadata>=4.8.1",
    "cloup>=3.0.0",
    "pyperclip>=1.8.2,<2",
    "simple-parsing>=0.1.5",
    "docker>=7.1.0",
    "gymnasium>=0.29.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "isort>=5.13.2",
    "pytest==7.4.2",
    "tox==4.6.3",
    "build>=1.2.1",
    "twine>=5.0.0",
    "semver>=3.0.2",
    "setuptools>=69.5.1",
    "sentry-sdk>=2.0.0",
    "ipykernel",
]
all = ["composio[dev]"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
