[project]
name = "composio"
version = "0.10.6"
description = "SDK for integrating Composio with your applications."
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "pysher>=1.0.8",
    "pydantic>=2.6.4",
    "composio-client==1.26.0",
    "typing-extensions>=4.0.0",
    "openai",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "composio",
    "nox>=2025.5.1",
    "pytest>=8.4.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "requests>=2.31.0",
    "ruff>=0.11.13",
    # Langchain provider demo
    "langchain_openai==1.1.0",
    "fastapi>=0.115.9",
    "twine>=6.1.0",
    "click>=8.2.1",
    "semver>=3.0.4",
    "tomli>=2.2.1",
]
