[project]
name = "swekit"
version = "0.4.4"
description = "Tools for running a SWE agent using Composio platform"
authors = [
    {name = "Shubhra", email = "shubhra@composio.dev"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.7.4",
    "swebench==2.1.0",
    "datasets>=2.20.0",
    "gitpython>=3.1.43",
    "composio_core>=0.7.0,<0.8.0",
    "unidiff==0.7.5",
    "tqdm==4.66.4",
    "rich",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2.16",
    "langgraph-prebuilt>=0.1.0",
    "composio_langgraph>=0.5.0,<0.8.0",
    "python-dotenv==1.0.1",
]

[project.scripts]
swekit = "swekit.cli:swekit"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
