[tool.poetry]
name = "Slack-to-Google-Calendar"
version = "0.1.0"
description = "Manage schedules in Google Calendarfrom Slack"
authors = ["Sunil Kumar Dash <sunil@composio.dev>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
composio-core = "^0.3.13"
composio-llamaindex = "^0.3.13"
llama-index-llms-groq = "^0.1.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"