[project]
name = "composio_langchain"
version = "0.7.4"
description = "Use Composio to get an array of tools with your langchain agent."
authors = [
    {name = "Composio", email = "tech@composio.dev"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2.post1",
    "pydantic>=2.6.4",
    "langchainhub>=0.1.15",
    "composio_core>=0.7.0,<0.8.0",

]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
