[project]
name = "composio_langgraph"
version = "0.7.4"
description = "Use Composio to get an array of tools with your langgraph agent."
authors = [
    {name = "Composio", email = "tech@composio.dev"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "composio_langchain>=0.5.0,<0.8.0",
    "langgraph<0.3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
