[project]
name = "composio-anthropic"
version = "0.8.6"
description = "Use Composio to get an array of tools with your Anthropic LLMs."
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.25.7",
    "composio",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
