[project]
name = "composio_claude_agent"
version = "0.1.0"
description = "Agentic Provider for Claude Agent SDK in the Composio SDK"
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "composio",
    "claude-agent-sdk (>=0.1.6,<0.2.0)",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
