[project]
name = "composio-claude-agent-sdk"
version = "0.10.5"
description = "Use Composio to get an array of tools with Claude Code Agents SDK."
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "composio",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
