[project]
name = "composio-gemini"
version = "0.8.6"
description = "Use Composio to get an array of tools with your Gemini agent."
readme = "README.md"
requires-python = ">=3.9,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai",
    "composio",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
