[project]
name = "composio-google"
version = "0.8.6"
description = "Use Composio to get an array of tools with your Google AI Python Gemini model."
readme = "README.md"
requires-python = ">=3.9,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-cloud-aiplatform>=1.38.0",
    "composio",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
