[project]
name = "composio-google-adk"
version = "1.0.0-rc9"
description = "Use Composio to get an array of tools with your Google AI Python Gemini model."
readme = "README.md"
requires-python = ">=3.9,<4"
authors = [
    { name = "Composio", email = "tech@composio.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-adk",
    "composio",
]

[project.urls]
Homepage = "https://github.com/ComposioHQ/composio"
